--- a/index.html
+++ b/index.html
@@ -20,30 +20,30 @@
         </nav>
     </section>
     <section id="banner">
-        <div class="container col-md-8 col-10 text-center pt-3">
+        <div class="container col-md-8 col-12 text-center pt-3">
             <div class="interact col-12 d-flex justify-content-center align-content-center">
                 <h1>Ready?</h1>
             </div>
-            <div class="btnContainer col-12 d-flex justify-content-center align-content-center m-3">
-                <button class="start-button rounded-5 py-1 px-5">Go!</button>
+            <div class="btnContainer col-12 d-flex justify-content-center align-content-center my-3">
+                <button class="start-button start-button-click rounded-5 py-1 px-5" id="start">Go!</button>
             </div>
         </div>
     </section>
-    <section id="game">
-        <div class="container d-flex justify-content-center game-container rounded-3 p-2">
+    <section id="game" class="mb-0">
+        <div class="container d-flex justify-content-center game-container rounded-3 p-2 mb-0">
             <img src="" alt="" class="zangief-laugh invisible">
             <div class="row col-12 d-flex justify-content-center align-items-center">
-                <div class="col-4 button-box m-3 rounded-circle blue button-up" id="box-1">
-                    <img src="" alt="" class="zangief-box invisible">
+                <div class="col-4 button-box m-md-3 m-1 rounded-circle blue button-up" id="blue">
+                    <img src="" alt="" class="zangief-box-left invisible">
                 </div>
-                <div class="col-4 button-box m-3 rounded-circle red button-up" id="box-2">
-                    <img src="" alt="" class="zangief-box invisible">
+                <div class="col-4 button-box m-md-3 m-1 rounded-circle red button-up" id="red">
+                    <img src="" alt="" class="zangief-box-right invisible">
                 </div>
-                <div class="col-4 button-box m-3 rounded-circle green button-up" id="box-3">
-                    <img src="" alt="" class="zangief-box invisible">
+                <div class="col-4 button-box m-md-3 m-1 rounded-circle green button-up" id="green">
+                    <img src="" alt="" class="zangief-box-left invisible">
                 </div>
-                <div class="col-4 button-box m-3 rounded-circle yellow button-up" id="box-4">
-                    <img src="" alt="" class="zangief-box invisible">
+                <div class="col-4 button-box m-md-3 m-1 rounded-circle yellow button-up" id="yellow">
+                    <img src="" alt="" class="zangief-box-right invisible">
                 </div>
             </div>
         </div>
