Possibly Completed Game
Third iteration of the game with multiple changes. Possibly the final version.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </section>
     <section id="banner">
         <div class="container col-md-8 col-12 text-center pt-3">
-            <div class="interact col-12 d-flex justify-content-center align-content-center">
+            <div class="col-12 d-flex justify-content-center align-content-center">
                 <h1>Ready?</h1>
             </div>
             <div class="btnContainer col-12 d-flex justify-content-center align-content-center my-3">
