--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section id="navBar">
         <nav class="navbar">
             <div class="container-fluid d-flex justif-content-start align-content-start">
-                <a href="#" class="navbar-brand text-center"><img src="./images/zangief.idle.gif" alt="Zangief Idle" height="30px">Zangief Sez</a>
+                <a href="#" class="navbar-brand text-center"><img src="./images/zangief/zangief.idle.gif" alt="Zangief Idle" height="30px">Zangief Sez</a>
             </div>
         </nav>
     </section>
@@ -29,20 +29,30 @@
             </div>
         </div>
     </section>
+    <section id="SFZone">
+        <div class="container arena mb-2 rounded-2">
+            <img src="./images/ryu/ryu-idle.gif" alt="Street Fighter Ryu" id="ryu-fighter">
+            <img src="./images/zangief/zangief.idle.gif" alt="Street Fighter Zangief" id="zangief-fighter" class="arena-flip">
+        </div>
+    </section>
     <section id="game" class="mb-0">
         <div class="container d-flex justify-content-center game-container rounded-3 p-2 mb-0">
             <img src="" alt="" class="zangief-laugh invisible">
             <div class="row col-12 d-flex justify-content-center align-items-center">
-                <div class="col-4 button-box m-md-3 m-1 rounded-circle blue button-up" id="blue">
+                <div class="col-4 button-box m-md-3 m-1 rounded-circle blue button-up d-flex justify-content-center align-items-center text-center" id="blue">
+                    <h2 class="button-text dark-buttons">High<br>Kick</h2>
                     <img src="" alt="" class="zangief-box-left invisible">
                 </div>
-                <div class="col-4 button-box m-md-3 m-1 rounded-circle red button-up" id="red">
+                <div class="col-4 button-box m-md-3 m-1 rounded-circle red button-up d-flex justify-content-center align-items-center text-center" id="red">
+                    <h2 class="button-text  dark-buttons">High Punch</h2>
                     <img src="" alt="" class="zangief-box-right invisible">
                 </div>
-                <div class="col-4 button-box m-md-3 m-1 rounded-circle green button-up" id="green">
+                <div class="col-4 button-box m-md-3 m-1 rounded-circle green button-up d-flex justify-content-center align-items-center text-center" id="green">
+                    <h2 class="button-text">Low<br>Kick</h2>
                     <img src="" alt="" class="zangief-box-left invisible">
                 </div>
-                <div class="col-4 button-box m-md-3 m-1 rounded-circle yellow button-up" id="yellow">
+                <div class="col-4 button-box m-md-3 m-1 rounded-circle yellow button-up d-flex justify-content-center align-items-center text-center" id="yellow">
+                    <h2 class="button-text">High Punch</h2>
                     <img src="" alt="" class="zangief-box-right invisible">
                 </div>
             </div>
