--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
     <section id="SFZone">
         <div class="container arena mb-2 rounded-2">
             <img src="./images/ryu/ryu-idle.gif" alt="Street Fighter Ryu" id="ryu-fighter">
-            <img src="./images/zangief/zangief.idle.gif" alt="Street Fighter Zangief" id="zangief-fighter" class="arena-flip">
+            <img src="./images/zangief/zangief.idle.gif" alt="Street Fighter Zangief" id="zangief-fighter" class="arena-flip increase-height">
         </div>
     </section>
     <section id="game" class="mb-0">
         <div class="container d-flex justify-content-center game-container rounded-3 p-2 mb-0">
-            <img src="" alt="" class="zangief-laugh invisible">
             <div class="row col-12 d-flex justify-content-center align-items-center">
                 <div class="col-4 button-box m-md-3 m-1 rounded-circle blue button-up d-flex justify-content-center align-items-center text-center" id="blue">
                     <h2 class="button-text dark-buttons">High<br>Kick</h2>
